Scaffold identity into the project. Still requires role allocation, as well as authorization

--- a/ContactTracing15/appsettings.json
+++ b/ContactTracing15/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ContactTracing15-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "MainDBContext": "Server=(localdb)\\mssqllocaldb;Database=MainDBContext-8263854e-ba87-46bc-93fb-7c6223e061ef;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MainDBContext": "Server=(localdb)\\mssqllocaldb;Database=MainDBContext-8263854e-ba87-46bc-93fb-7c6223e061ef;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ContactTracing15ContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ContactTracing15;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
