Added documentation to program.cs and startup.cs files, as well as basic documentation to the models and the interfaces in .Services

--- a/ContactTracing15.Services/ContactTracing15.Services.csproj
+++ b/ContactTracing15.Services/ContactTracing15.Services.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\George\source\repos\ContactTracing15\ContactTracing15.Services\ContactTracing15.Services.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.4">
