--- a/ContactTracing15/ContactTracing15.csproj
+++ b/ContactTracing15/ContactTracing15.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>aspnet-ContactTracing15-1AF61169-3658-432B-9523-BA6CFF6F0A02</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
