--- a/ContactTracing15.Services/ContactTracing15.Services.csproj
+++ b/ContactTracing15.Services/ContactTracing15.Services.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\George\source\repos\ContactTracing15\ContactTracing15.Services\ContactTracing15.Services.xml</DocumentationFile>
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
