--- a/ContactTracing15.Models/ContactTracing15.Models.csproj
+++ b/ContactTracing15.Models/ContactTracing15.Models.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\George\source\repos\ContactTracing15\ContactTracing15.Models\ContactTracing15.Models.xml</DocumentationFile>
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
 </Project>
