Set up azure hosting through visual studio menus. Code added to startup to automatically apply migrations to the database

--- a/ContactTracing15/Dockerfile
+++ b/ContactTracing15/Dockerfile
@@ -8,6 +8,8 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
 WORKDIR /src
 COPY ["ContactTracing15/ContactTracing15.csproj", "ContactTracing15/"]
+COPY ["ContactTracing15.Models/ContactTracing15.Models.csproj", "ContactTracing15.Models/"]
+COPY ["ContactTracing15.Services/ContactTracing15.Services.csproj", "ContactTracing15.Services/"]
 RUN dotnet restore "ContactTracing15/ContactTracing15.csproj"
 COPY . .
 WORKDIR "/src/ContactTracing15"
