--- a/ContactTracing15.Models/ContactTracing15.Models.csproj
+++ b/ContactTracing15.Models/ContactTracing15.Models.csproj
@@ -8,4 +8,8 @@
     <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Okta.AspNetCore" Version="3.5.0" />
+  </ItemGroup>
+
 </Project>
