--- a/ContactTracing15.Models/ContactTracing15.Models.csproj
+++ b/ContactTracing15.Models/ContactTracing15.Models.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="Cronos" Version="0.7.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.0" />
     <PackageReference Include="Okta.AspNetCore" Version="3.5.0" />
   </ItemGroup>
