--- a/ContactTracing15.Services/ContactTracing15.Services.csproj
+++ b/ContactTracing15.Services/ContactTracing15.Services.csproj
@@ -12,6 +12,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.95.4" />
     <PackageReference Include="Cronos" Version="0.7.0" />
     <PackageReference Include="ExcelEngine" Version="1.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
